[project]
name = "py-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "beautifulsoup4>=4.13",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]


# https://docs.astral.sh/uv/concepts/build-backend/
[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["srt2lrc", "toc_extractor"]


# https://github.com/anthropics/claude-cookbooks/blob/main/pyproject.toml
[tool.ruff]
line-length = 150
target-version = "py312"
extend-include = [
    "*.ipynb",
] # Ruff v0.6.0+ includes notebooks by default, but explicit is better

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "S", "B"]
ignore = [
    "E501", # line too long
    "S101", # assert used (ok in tests)
    "S301", # pickle usage ok for local data in cookbooks
    "S311", # pseudo-random generators ok for non-crypto
    "S608", # SQL string construction ok for demo/educational code
    "N806", # variable in function should be lowercase (allow for API responses)
]

[tool.ruff.lint.per-file-ignores]
# Notebooks have different conventions than regular Python files
"*.ipynb" = [
    "E402", # imports mid-file
    "F811", # redefinitions (common in notebooks)
    "N803", # argument name should be lowercase
    "N806", # variable in function should be lowercase
]
